[gd_scene load_steps=9 format=2]

[ext_resource path="res://asset/textures/32text/32snow1.png" type="Texture" id=1]
[ext_resource path="res://asset/textures/32text/32plane.png" type="Texture" id=2]
[ext_resource path="res://scenes/monsteroftime/arrow.gd" type="Script" id=3]

[sub_resource type="SpatialMaterial" id=1]
params_cull_mode = 2
albedo_color = Color( 1, 0, 0, 1 )
albedo_texture = ExtResource( 2 )
metallic_specular = 0.0

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0.666667, 0.278431, 1 )
albedo_texture = ExtResource( 1 )

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( -0.106161, -0.09, -1.95957, 0.23628, 0.23628, 0.63087 ),
"array_data": PoolByteArray( 145, 67, 68, 60, 219, 133, 230, 60, 8, 119, 235, 191, 0, 127, 127, 63, 0, 0, 0, 0, 0, 192, 19, 191, 234, 61, 5, 62, 219, 133, 230, 60, 49, 211, 250, 191, 0, 127, 126, 63, 0, 0, 12, 63, 0, 128, 114, 191, 145, 67, 68, 60, 219, 133, 230, 60, 215, 18, 170, 191, 0, 127, 127, 63, 0, 0, 0, 0, 0, 0, 128, 63, 240, 106, 217, 189, 219, 133, 230, 60, 49, 211, 250, 191, 0, 127, 127, 63, 0, 0, 12, 191, 0, 128, 114, 191, 145, 67, 68, 60, 219, 133, 230, 60, 8, 119, 235, 191, 129, 0, 0, 127, 0, 0, 0, 0, 0, 192, 19, 191, 145, 67, 68, 60, 109, 202, 21, 62, 49, 211, 250, 191, 129, 0, 0, 126, 0, 0, 12, 63, 0, 128, 114, 191, 145, 67, 68, 60, 219, 133, 230, 60, 215, 18, 170, 191, 129, 0, 0, 127, 0, 0, 0, 0, 0, 0, 128, 63, 145, 67, 68, 60, 236, 81, 184, 189, 49, 211, 250, 191, 129, 0, 0, 127, 0, 0, 12, 191, 0, 128, 114, 191 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 2, 0, 3, 0, 0, 0, 4, 0, 5, 0, 6, 0, 6, 0, 7, 0, 4, 0 ),
"blend_shape_data": [  ],
"format": 2186519,
"index_count": 12,
"material": SubResource( 1 ),
"name": "DSMaterial16",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 8
}
surfaces/1 = {
"aabb": AABB( -0.03109, -0.021324, -1.89899, 0.086138, 0.099464, 3.6729 ),
"array_data": PoolByteArray( 145, 67, 68, 60, 229, 183, 232, 60, 40, 15, 227, 63, 149, 0, 0, 127, 0, 0, 36, 194, 0, 224, 11, 64, 117, 176, 254, 188, 230, 32, 104, 59, 204, 69, 196, 63, 149, 0, 0, 127, 0, 0, 37, 194, 0, 160, 107, 63, 117, 176, 254, 188, 214, 53, 90, 61, 204, 69, 196, 63, 149, 0, 0, 127, 0, 224, 34, 194, 0, 160, 107, 63, 117, 176, 254, 188, 230, 32, 104, 59, 204, 69, 196, 63, 215, 185, 176, 86, 0, 0, 37, 194, 0, 160, 107, 63, 145, 67, 68, 60, 229, 183, 232, 60, 40, 15, 227, 63, 215, 185, 176, 86, 0, 0, 36, 194, 0, 224, 11, 64, 145, 67, 68, 60, 171, 175, 174, 188, 204, 69, 196, 63, 215, 185, 176, 86, 0, 0, 38, 194, 0, 160, 107, 63, 145, 67, 68, 60, 171, 175, 174, 188, 204, 69, 196, 63, 210, 176, 176, 86, 0, 0, 38, 194, 0, 160, 107, 63, 117, 176, 254, 188, 230, 32, 104, 59, 27, 18, 243, 191, 210, 176, 176, 86, 0, 0, 37, 194, 0, 64, 137, 193, 117, 176, 254, 188, 230, 32, 104, 59, 204, 69, 196, 63, 210, 176, 176, 86, 0, 0, 37, 194, 0, 160, 107, 63, 145, 67, 68, 60, 171, 175, 174, 188, 27, 18, 243, 191, 210, 176, 176, 86, 0, 0, 38, 194, 0, 64, 137, 193, 3, 122, 97, 61, 230, 32, 104, 59, 27, 18, 243, 191, 127, 127, 127, 63, 0, 0, 37, 194, 0, 64, 137, 193, 117, 176, 254, 188, 230, 32, 104, 59, 27, 18, 243, 191, 127, 127, 127, 63, 0, 0, 37, 194, 0, 64, 137, 193, 145, 67, 68, 60, 171, 175, 174, 188, 27, 18, 243, 191, 127, 127, 127, 63, 0, 0, 38, 194, 0, 64, 137, 193, 117, 176, 254, 188, 214, 53, 90, 61, 27, 18, 243, 191, 127, 127, 127, 63, 0, 224, 34, 194, 0, 64, 137, 193, 117, 176, 254, 188, 214, 53, 90, 61, 27, 18, 243, 191, 129, 0, 0, 127, 0, 224, 34, 194, 0, 64, 137, 193, 117, 176, 254, 188, 230, 32, 104, 59, 204, 69, 196, 63, 129, 0, 0, 127, 0, 0, 37, 194, 0, 160, 107, 63, 117, 176, 254, 188, 230, 32, 104, 59, 27, 18, 243, 191, 129, 0, 0, 127, 0, 0, 37, 194, 0, 64, 137, 193, 117, 176, 254, 188, 214, 53, 90, 61, 204, 69, 196, 63, 129, 0, 0, 127, 0, 224, 34, 194, 0, 160, 107, 63, 117, 176, 254, 188, 214, 53, 90, 61, 27, 18, 243, 191, 210, 80, 80, 86, 0, 224, 34, 194, 0, 64, 137, 193, 145, 67, 68, 60, 221, 7, 160, 61, 204, 69, 196, 63, 210, 80, 80, 86, 0, 224, 33, 194, 0, 160, 107, 63, 117, 176, 254, 188, 214, 53, 90, 61, 204, 69, 196, 63, 210, 80, 80, 86, 0, 224, 34, 194, 0, 160, 107, 63, 145, 67, 68, 60, 221, 7, 160, 61, 27, 18, 243, 191, 210, 80, 80, 86, 0, 224, 33, 194, 0, 64, 137, 193, 145, 67, 68, 60, 221, 7, 160, 61, 27, 18, 243, 191, 46, 80, 176, 170, 0, 224, 33, 194, 0, 64, 137, 193, 3, 122, 97, 61, 214, 53, 90, 61, 204, 69, 196, 63, 46, 80, 176, 170, 0, 224, 34, 194, 0, 160, 107, 63, 145, 67, 68, 60, 221, 7, 160, 61, 204, 69, 196, 63, 46, 80, 176, 170, 0, 224, 33, 194, 0, 160, 107, 63, 3, 122, 97, 61, 214, 53, 90, 61, 27, 18, 243, 191, 46, 80, 176, 170, 0, 224, 34, 194, 0, 64, 137, 193, 3, 122, 97, 61, 214, 53, 90, 61, 27, 18, 243, 191, 127, 0, 0, 129, 0, 224, 34, 194, 0, 64, 137, 193, 3, 122, 97, 61, 230, 32, 104, 59, 204, 69, 196, 63, 127, 0, 0, 129, 0, 0, 37, 194, 0, 160, 107, 63, 3, 122, 97, 61, 214, 53, 90, 61, 204, 69, 196, 63, 127, 0, 0, 129, 0, 224, 34, 194, 0, 160, 107, 63, 3, 122, 97, 61, 230, 32, 104, 59, 27, 18, 243, 191, 127, 0, 0, 129, 0, 0, 37, 194, 0, 64, 137, 193, 3, 122, 97, 61, 230, 32, 104, 59, 27, 18, 243, 191, 46, 176, 80, 170, 0, 0, 37, 194, 0, 64, 137, 193, 145, 67, 68, 60, 171, 175, 174, 188, 204, 69, 196, 63, 46, 176, 80, 170, 0, 0, 38, 194, 0, 160, 107, 63, 3, 122, 97, 61, 230, 32, 104, 59, 204, 69, 196, 63, 46, 176, 80, 170, 0, 0, 37, 194, 0, 160, 107, 63, 145, 67, 68, 60, 171, 175, 174, 188, 27, 18, 243, 191, 46, 176, 80, 170, 0, 0, 38, 194, 0, 64, 137, 193, 145, 67, 68, 60, 229, 183, 232, 60, 40, 15, 227, 63, 41, 185, 80, 170, 0, 0, 36, 194, 0, 224, 11, 64, 3, 122, 97, 61, 230, 32, 104, 59, 204, 69, 196, 63, 41, 185, 80, 170, 0, 0, 37, 194, 0, 160, 107, 63, 145, 67, 68, 60, 171, 175, 174, 188, 204, 69, 196, 63, 41, 185, 80, 170, 0, 0, 38, 194, 0, 160, 107, 63, 3, 122, 97, 61, 214, 53, 90, 61, 204, 69, 196, 63, 107, 0, 0, 129, 0, 224, 34, 194, 0, 160, 107, 63, 3, 122, 97, 61, 230, 32, 104, 59, 204, 69, 196, 63, 107, 0, 0, 129, 0, 0, 37, 194, 0, 160, 107, 63, 145, 67, 68, 60, 229, 183, 232, 60, 40, 15, 227, 63, 107, 0, 0, 129, 0, 0, 36, 194, 0, 224, 11, 64, 145, 67, 68, 60, 221, 7, 160, 61, 204, 69, 196, 63, 41, 71, 176, 170, 0, 224, 33, 194, 0, 160, 107, 63, 3, 122, 97, 61, 214, 53, 90, 61, 204, 69, 196, 63, 41, 71, 176, 170, 0, 224, 34, 194, 0, 160, 107, 63, 145, 67, 68, 60, 229, 183, 232, 60, 40, 15, 227, 63, 41, 71, 176, 170, 0, 0, 36, 194, 0, 224, 11, 64, 117, 176, 254, 188, 214, 53, 90, 61, 204, 69, 196, 63, 215, 71, 80, 86, 0, 224, 34, 194, 0, 160, 107, 63, 145, 67, 68, 60, 221, 7, 160, 61, 204, 69, 196, 63, 215, 71, 80, 86, 0, 224, 33, 194, 0, 160, 107, 63, 145, 67, 68, 60, 229, 183, 232, 60, 40, 15, 227, 63, 215, 71, 80, 86, 0, 0, 36, 194, 0, 224, 11, 64, 3, 122, 97, 61, 214, 53, 90, 61, 27, 18, 243, 191, 127, 127, 127, 63, 0, 224, 34, 194, 0, 64, 137, 193, 145, 67, 68, 60, 221, 7, 160, 61, 27, 18, 243, 191, 127, 127, 127, 63, 0, 224, 33, 194, 0, 64, 137, 193 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 7, 0, 6, 0, 9, 0, 10, 0, 11, 0, 12, 0, 11, 0, 10, 0, 13, 0, 14, 0, 15, 0, 16, 0, 15, 0, 14, 0, 17, 0, 18, 0, 19, 0, 20, 0, 19, 0, 18, 0, 21, 0, 22, 0, 23, 0, 24, 0, 23, 0, 22, 0, 25, 0, 26, 0, 27, 0, 28, 0, 27, 0, 26, 0, 29, 0, 30, 0, 31, 0, 32, 0, 31, 0, 30, 0, 33, 0, 34, 0, 35, 0, 36, 0, 37, 0, 38, 0, 39, 0, 40, 0, 41, 0, 42, 0, 43, 0, 44, 0, 45, 0, 13, 0, 10, 0, 46, 0, 13, 0, 46, 0, 47, 0 ),
"blend_shape_data": [  ],
"format": 2186519,
"index_count": 66,
"material": SubResource( 4 ),
"name": "_12",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 48
}

[sub_resource type="ConvexPolygonShape" id=3]
margin = 0.08
points = PoolVector3Array( 0.011979, -0.09, -1.95957, -0.106161, 0.02814, -1.95957, 0.130119, 0.02814, -1.95957, 0.0550441, 0.00353135, 1.53307, 0.011979, -0.0213317, 1.53307, -0.0311093, 0.00353135, 1.53307, 0.011979, 0.14628, -1.95957, -0.0311093, 0.0532575, 1.53307, 0.0550441, 0.0532575, 1.53307, 0.011979, 0.0283944, 1.7739, 0.011979, 0.0781205, 1.53307 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.10355, 0.155715, 1.07534 )

[node name="arrow" type="RigidBody"]
collision_layer = 7
collision_mask = 7
gravity_scale = 0.2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -0.6, 0, -5.24537e-08, 0, 0.6, 0, 5.24537e-08, 0, -0.6, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = null
material/1 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -0.6, 0, -5.24537e-08, 0, 0.6, 0, 5.24537e-08, 0, -0.6, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Area" type="Area" parent="."]
collision_layer = 6
collision_mask = 6
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_arrow_body_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
